[package]
name = "eiger_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.31.0", features= ["net", "rt", "macros", "time", "io-util"]}
secp256k1 = { version = "0.27.0", features = ["global-context","rand-std","recovery"]}
sha2 = "0.10.7"
rand = "0.8"
bytes = "1.4.0"
byteorder = "1.4.3"
rlp = "0.5.2"
ethereum-types = "0.14.1"
ctr = "0.9.2"
aes = "0.8.3"
concat-kdf = "0.1.0"
hmac = "0.12.1"
hex = "0.4.3"
sha3 = "0.10.8"